oups raté une ligne

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -526,8 +526,8 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GecuS.4 & 3.1.2.3.4 & Cliquer sur un compte & La liste des fichiers auquel il a accès se trouve a droite et un plus est présent en bas a droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GecuS.5 & 3.1.2.3.5 & Cliquer sur un compte et cliquer sur le bouton "-" présent en 		\cline{1-2}\cline{4-5}
-		 GecuS.6 & 3.1.2.3.6 & & Le compte est supprimé après confirmation. & \\
+		GecuS.5 & 3.1.2.3.5 & Cliquer sur un compte et cliquer sur le bouton "-" présent en bas a droite de la partie droite & Le compte est banni après confirmation. & \\ 							\cline{1-2}\cline{4-5}
+		GecuS.6 & 3.1.2.3.6 & & Le compte est supprimé après confirmation. & \\
 		\hline
 	\end{tabular}
 	\egroup
