--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -541,15 +541,15 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BancS.1 & 3.1.2.4.1 & & & \\
+		BancS.1 & 3.1.2.4.1 & Cliquer sur un compte. & Un moins est présent dans la zone de droites. & \\
+		\cline{1-2}\cline{4-5}
+		BancS.2 & 3.1.2.4.2 & Et retirer les droits sur un fichier. & Ouvrir le fichier .acc et vérifié que les droits sur le fichier ont été retiré. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BancS.2 & 3.1.2.4.2 & & & \\
+		BancS.3 & 3.1.2.4.3 & Bannir temporairement une personne. & Verifier que le fichier .accban est mis a jours. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BancS.3 & 3.1.2.4.3 & & & \\
+		BancS.4 & 3.1.2.4.4 & Bannir un compte. & Vérifier que le champs raison est présent lors du bannissement. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BancS.4 & 3.1.2.4.4 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BancS.5 & 3.1.2.4.5 & & & \\
+		BancS.5 & 3.1.2.4.5 & Supprimer les droits d'un compte sur un fichier. & Vérifier que l'utilisateur n'a plus les droits sur le fichier. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -563,11 +563,11 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BantS.1 & 3.1.2.5.1 & & & \\
+		BantS.1 & 3.1.2.5.1 & Cliquer sur un compte puis sur "-" présent sur la zone de gauche. & Un chams permet de donner une durée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BantS.2 & 3.1.2.5.2 & & & \\
+		BantS.2 & 3.1.2.5.2 & Cliquer sur un compte bannis. & Le temps restant apparait a droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BantS.3 & 3.1.2.5.3 & & & \\
+		BantS.3 & 3.1.2.5.3 & Cliquer sur un compte puis sur "-" présent dans la zone de gauche. & Un champs permet de donner la raison. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -581,11 +581,11 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BanpS.1 & 3.1.2.6.1 & & & \\
+		BanpS.1 & 3.1.2.6.1 & Cliquer sur un compte puis sélectionner un fichier dans la zone de droite et cliquer sur "-" & L'utilisateur n'a plus les droits sur le fichier. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BanpS.2 & 3.1.2.6.2 & & & \\
+		BanpS.2 & 3.1.2.6.2 & Donner une raison au bannissement. & Vérifier que le motif est présent dans le fichier .accban. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BanpS.3 & 3.1.2.6.3 & & & \\
+		BanpS.3 & 3.1.2.6.3 & Cliquer sur un compte puis Cliquer sur le moins de la partie droite. & Un champs permet de donner la durée du bannissement.  & \\
 		\hline
 	\end{tabular}
 	\egroup
