--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -482,7 +482,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}		
 		AuthS.3 & 3.1.2.1.2.3 & Envoyer une chaine contenant le mot "succès" ou "échec" (suivant la réponse au test AuthS.2) sur un client sommaire. & Chaine reçu en concordance avec le résultat du test AuthS.2 & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}		
-		AuthS.4 & 3.1.2.1.2.4 & & & \\
+		AuthS.4 & 3.1.2.1.2.4 & Vérifier que le pseudo et le mot de passe admin sont unique. & Les identifiants sont unique. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		AuthS.5 & 3.1.2.1.2.5 & Se connecter en temps qu'Administrateur. &  Avoir accès a la totalité des fichiers du serveur. & \\
 		\hline
@@ -518,16 +518,46 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		GecuS.1 & 3.1.2.3.1 & Se connecter en tant qu'administrateur et essayer de crée un compte & LE compte peut etre crée et les droits donné. & \\
+		GecuS.1 & 3.1.2.3.1.1 & Ouvrir le logiciel & Une zone est présente a gauche. & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.1 & 3.1.2.3.1.2 & & Dans cette zone se trouve la liste des comptes. & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.2 & 3.1.2.3.1.3 & & En face de chaque compte se trouve un voyant vert si la personne est connectée, rouge sinon. & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3 & 3.1.2.3.1.4 & & En bas de la zone de gauche 2 boutons sont présent & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3.1 & 3.1.2.3.1.4.1 & & Un bouton "-" rouge est présent en bas a droite & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GecuS.2 & 3.1.2.3.2 & Se connecter en tant qu'administrateur et crée un compte et cocher compte temporaire & Un compte temporaire est crée & \\
+		GecuS.1.3.1.1 & 3.1.2.3.1.4.2 & Cliquer sur le bouton "-" & Un pop-up apparait. & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3.2 & 3.1.2.3.1.4.3 & & Un bouton "+" vert est présent en bas a droite & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GecuS.3 & 3.1.2.3.3 & Regarder la liste des membres présente à droite & Elle contient la totalité des comptes crée & \\
+		GecuS.1.3.2.1 & 3.1.2.3.1.4.4 & Cliquer sur le bouton "+" & Un pop-up apparait. & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.4 & 3.1.2.3.1.5 & & Les comptes temporaires sont soulignés & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.5 & 3.1.2.3.1.6 & & Le compte administrateur n'est pas présent dans la liste & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.6 & 3.1.2.3.1.7 & & Les comptes bannis sont en rouge & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.7 & 3.1.2.3.1.8 & & Les comptes bannis temporairement sont en gris clair & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.8 & 3.1.2.3.1.9 & & Les comptes bannis partiellement sont en orange. & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.9 & 3.1.2.3.1.10 & & Les comptes normaux sont en noir & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GecuS.4 & 3.1.2.3.4 & Cliquer sur un compte & La liste des fichiers auquel il a accès se trouve a droite et un plus est présent en bas a droite. & \\
+		GecuS.1.10 & 3.1.2.3.1.11 & Cliquer sur un compte. & La liste de droite change et contient les répertoire auquel le compte à accès. & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.2 & 3.1.2.3.1 & Se connecter en tant qu'administrateur et essayer de crée un compte & Le compte peut être crée et les droits donné. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GecuS.5 & 3.1.2.3.5 & Cliquer sur un compte et cliquer sur le bouton "-" présent en bas a droite de la partie droite & Le compte est banni après confirmation. & \\ 							\cline{1-2}\cline{4-5}
-		GecuS.6 & 3.1.2.3.6 & & Le compte est supprimé après confirmation. & \\
+		GecuS.3 & 3.1.2.3.2 & Se connecter en tant qu'administrateur et crée un compte et cocher compte temporaire & Un compte temporaire est crée & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		GecuS.4 & 3.1.2.3.3 & Regarder la liste des membres présente à droite & Elle contient la totalité des comptes crée & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		GecuS.5 & 3.1.2.3.4 & Cliquer sur un compte & La liste des fichiers auquel il a accès se trouve a droite et un plus est présent en bas a droite. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		GecuS.6 & 3.1.2.3.5 & Cliquer sur un compte et cliquer sur le bouton "-" présent en bas a droite de la partie droite & Le compte est banni après confirmation. & \\ 							\cline{1-2}\cline{4-5}
+		GecuS.7 & 3.1.2.3.6 & & Le compte est supprimé après confirmation. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -897,7 +927,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		\rowcolor{red}CrypS.1 & 3.1.3.1.1 & & & \\
+		CrypS.1 & 3.1.3.1.1 & Ouvrir le logiciel & Vérifier la présence des boutons de cryptage dans le menu configuration. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CrypS.2 & 3.1.3.1.2 & Ourir le menu de gestion des fichiers. & Un bouton "Cryptage du fichier" est présent. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
