--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -472,7 +472,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -494,7 +494,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -514,7 +514,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -525,14 +525,30 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		GecuS.1.2 & 3.1.2.3.1.3 & & En face de chaque compte se trouve un voyant vert si la personne est connectée, rouge sinon. & \\
 		\cline{1-2}\cline{4-5}
 		GecuS.1.3 & 3.1.2.3.1.4 & & En bas de la zone de gauche 2 boutons sont présent & \\
-		\cline{1-2}\cline{4-5}
-		GecuS.1.3.1 & 3.1.2.3.1.4.1 & & Un bouton "-" rouge est présent en bas a droite & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		GecuS.1.3.1 & 3.1.2.3.1.4.1 & & Un bouton "-" rouge est présent en bas a droite & \\
+		\cline{1-2}\cline{4-5}
 		GecuS.1.3.1.1 & 3.1.2.3.1.4.2 & Cliquer sur le bouton "-" & Un pop-up apparait. & \\
 		\cline{1-2}\cline{4-5}
 		GecuS.1.3.2 & 3.1.2.3.1.4.3 & & Un bouton "+" vert est présent en bas a droite & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GecuS.1.3.2.1 & 3.1.2.3.1.4.4 & Cliquer sur le bouton "+" & Un pop-up apparait. & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3.2.1.1 & 3.1.2.6.2.1 & & Le pop-up contient 4 champs & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3.2.1.1.1 & 3.2.6.2.1.1 & & Un champ texte aligné au texte "Nom d'utilisateur" & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3.2.1.1.2 & 3.2.6.2.1.2 & & Un champ texte aligné au texte "Mot de passe" & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3.2.1.1.3 & 3.2.6.2.1.3 & & Un champs de type selection de fichier & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3.2.1.1.3 & 3.2.6.2.1.4 & & Une case à cochée aligné avec le texte "Utilisateur temporaire" & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		GecuS.1.3.2.1.2 & 3.2.6.2.2 & Cocher la case "Utilisateur Temporaire" & Un champ de type date s'ajoute" & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3.3 & 3.2.6.2.3 & & En bas a droite se trouve un bouton annulé & \\
+		\cline{1-2}\cline{4-5}
+		GecuS.1.3.4 & 3.2.6.2.4 & & En bas a gauche un bouton "Valider" est présent & \\ 
 		\cline{1-2}\cline{4-5}
 		GecuS.1.4 & 3.1.2.3.1.5 & & Les comptes temporaires sont soulignés & \\
 		\cline{1-2}\cline{4-5}
@@ -547,7 +563,19 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		GecuS.1.9 & 3.1.2.3.1.10 & & Les comptes normaux sont en noir & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GecuS.1.10 & 3.1.2.3.1.11 & Cliquer sur un compte. & La liste de droite change et contient les répertoire auquel le compte à accès. & \\
-		\cline{1-2}\cline{4-5}
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+\newpage
+
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
 		GecuS.2 & 3.1.2.3.1 & Se connecter en tant qu'administrateur et essayer de crée un compte & Le compte peut être crée et les droits donné. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GecuS.3 & 3.1.2.3.2 & Se connecter en tant qu'administrateur et crée un compte et cocher compte temporaire & Un compte temporaire est crée & \\
@@ -556,7 +584,8 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GecuS.5 & 3.1.2.3.4 & Cliquer sur un compte & La liste des fichiers auquel il a accès se trouve a droite et un plus est présent en bas a droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GecuS.6 & 3.1.2.3.5 & Cliquer sur un compte et cliquer sur le bouton "-" présent en bas a droite de la partie droite & Le compte est banni après confirmation. & \\ 							\cline{1-2}\cline{4-5}
+		GecuS.6 & 3.1.2.3.5 & Cliquer sur un compte et cliquer sur le bouton "-" présent en bas a droite de la partie droite & Le compte est banni après confirmation. & \\
+		\cline{1-2}\cline{4-5}
 		GecuS.7 & 3.1.2.3.6 & & Le compte est supprimé après confirmation. & \\
 		\hline
 	\end{tabular}
@@ -567,7 +596,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -617,7 +646,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -635,7 +664,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -654,7 +683,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -674,7 +703,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -704,7 +733,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -720,7 +749,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -742,7 +771,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -764,7 +793,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -809,7 +838,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -867,7 +896,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -885,7 +914,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -899,7 +928,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -930,7 +959,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
