Fin cahier de test

--- a/Document_des_exigences/Document_des_exigences.tex
+++ b/Document_des_exigences/Document_des_exigences.tex
@@ -491,7 +491,7 @@ Si le client a été auparavant banni par le serveur.
 		
 	\subparagraph{Interface graphique changement droits}\label{chg} 
 		\begin{enumerate}
-			\item Dans la partie gauche du programme ce trouvera par défaut la liste de tout les fichiers accessible sur le serveur.
+			\item Dans la partie droite du programme ce trouvera par défaut la liste de tout les fichiers accessible sur le serveur.
 			\item En cliquant sur un utilisateur seul a liste des fichiers accessible par l'utilisateur sera présente.
 			\item En bas de cette fenêtre seront présent 2 champs
 				\begin{enumerate}[label=\arabic*.]
