--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -668,11 +668,23 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BanpS.1 & 3.1.2.6.1 & Cliquer sur un compte puis sélectionner un fichier dans la zone de droite et cliquer sur "-" & L'utilisateur n'a plus les droits sur le fichier. & \\
+		BanpS.1 & 3.1.2.6.3.1 & Ouvrir le logiciel & A droite se trouve la liste de tout les fichiers présent sur le serveur & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BanpS.2 & 3.1.2.6.2 & Donner une raison au bannissement. & Vérifier que le motif est présent dans le fichier .accban. & \\
+		BanpS.2 & Cliquer sur un utilisateur & Dans la partie droite seul la liste des fichiers accessible par l'utilisateur est présente. & \\
+		\cline{1-2}\cline{4-5}
+		BanpS.2.1 & 3.1.2.6.3.3 & & 2 Champs sont présent en bas a droite de la partie de droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BanpS.3 & 3.1.2.6.3 & Cliquer sur un compte puis Cliquer sur le moins de la partie droite. & Un champs permet de donner la durée du bannissement.  & \\
+		BanpS.2.1.1 & 3.1.2.6.3.3.1 & & Un "+" vert est présent en bas a droite & \\
+		\cline{1-2}\cline{4-5}
+		BanpS.2.1.1.1 & 3.1.2.6.3.5 & Cliquer sur le "+" & Un pop-up apparait, celui ci permettant de selectionner des fichiers & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		BanpS.2.1.2 & 3.1.2.6.3.3.1 & & A droite du plus un "-" Rouge est présent & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		BanpS.3 & 3.1.2.6.1 & Cliquer sur un compte puis sélectionner un fichier dans la zone de droite et cliquer sur "-" & L'utilisateur n'a plus les droits sur le fichier. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		BanpS.4 & 3.1.2.6.2 & Donner une raison au bannissement. & Vérifier que le motif est présent dans le fichier .accban. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		BanpS.5 & 3.1.2.6.3 & Cliquer sur un compte puis Cliquer sur le moins de la partie droite. & Un champs permet de donner la durée du bannissement.  & \\
 		\hline
 	\end{tabular}
 	\egroup
