--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -670,7 +670,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		BanpS.1 & 3.1.2.6.3.1 & Ouvrir le logiciel & A droite se trouve la liste de tout les fichiers présent sur le serveur & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BanpS.2 & Cliquer sur un utilisateur & Dans la partie droite seul la liste des fichiers accessible par l'utilisateur est présente. & \\
+		BanpS.2 & 3.1.2.6.3.2 & Cliquer sur un utilisateur & Dans la partie droite seul la liste des fichiers accessible par l'utilisateur est présente. & \\
 		\cline{1-2}\cline{4-5}
 		BanpS.2.1 & 3.1.2.6.3.3 & & 2 Champs sont présent en bas a droite de la partie de droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
