derniere maj CTR

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -22,7 +22,7 @@
 \rhead{Kould Not Share}
 \rfoot{\thepage}
 
-\author{Nicolas REYNAUD, Kevin BASCOL}
+\author{Nicolas REYNAUD, Kevin BASCOL, Kévin Laoussing}
 \title{Cahier des tests de recette}
 \date{5 Novembre 2014}
 
@@ -146,7 +146,7 @@
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -171,7 +171,7 @@
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -272,7 +272,7 @@
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -291,7 +291,7 @@
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -321,7 +321,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -338,7 +338,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -353,7 +353,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -380,7 +380,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -415,7 +415,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -437,7 +437,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -472,7 +472,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -494,15 +494,15 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		PafiS.1 & 3.1.2.2.1 & Crée un compte et essayer de partager des fichiers présent a partir de la racine. & Les fichiers ne doivent pas être accessible. & \\
+		PafiS.1 & 3.1.2.2.1 & Créer un compte et essayer de partager des fichiers présent a partir de la racine. & Les fichiers ne doivent pas être accessible. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		PafiS.2 & 3.1.2.2.2 & Crée 2 comptes et partager un même fichier a ses 2 comptes & Se connecter sur les 2 comptes et vérifier l'accès aux fichiers. & \\
+		PafiS.2 & 3.1.2.2.2 & Créer 2 comptes et partager un même fichier a ses 2 comptes & Se connecter sur les 2 comptes et vérifier l'accès aux fichiers. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		PafiS.3 & 3.1.2.2.3 & Crée un compte lui partager un fichier et bloqué l'accès a un sous dossier & Se connecter sur le compte crée, le fichier ne doit pas être présent dans la liste des fichiers. & \\
+		PafiS.3 & 3.1.2.2.3 & Créer un compte lui partager un fichier et bloqué l'accès a un sous dossier & Se connecter sur le compte crée, le fichier ne doit pas être présent dans la liste des fichiers. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		PafiS.4 & 3.1.2.2.4 & Ouvrir un explorateur de fichier sur le serveur & Les fichiers sont visible avec l'explorateur de fichier & \\
 		\hline
@@ -514,7 +514,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -572,7 +572,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -596,7 +596,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -646,7 +646,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -664,7 +664,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -695,7 +695,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -715,7 +715,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -745,7 +745,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -761,7 +761,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -769,7 +769,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CotS.2 & 3.1.2.6.7.2 & Ouvrir le fichier .acctmp & Le fichier contient un timestamp. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CotS.3 & 3.1.2.6.7.3 & Accéder a un compte dont le temps est écoulé & Le compte doit être supprimé du fichier .acctmp & \\
+		CotS.3 & 3.1.2.6.7.3 & Accéder à un compte dont le temps est écoulé & Le compte doit être supprimé du fichier .acctmp & \\
 		\cline{1-2}\cline{4-5}
 		CotS.3.1 & 3.1.2.6.7.4 & & Un message indique que le compte temporaire vient d'être supprimé. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -783,7 +783,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -805,7 +805,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -850,7 +850,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -908,7 +908,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -926,11 +926,11 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		DoupS.1 & 3.1.2.10.1 & Télécharger puis Téléverser un fichier en étant connecté & Le transférer se fait dans les 2 cas. & \\
+		DwupS.1 & 3.1.2.10.1 & Télécharger puis Téléverser un fichier en étant connecté & Le transférer se fait dans les 2 cas. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -940,7 +940,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
@@ -961,6 +961,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		MostS.7.1 & 3.1.2.11.1.7 & & Toutes les 2 semaines un rapport contient les informations listé ci-dessus. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		MostS.8 & 3.1.2.11.1.8 & Ouvrir le logiciel & Un bouton "Temps réel" est présent et génère un fichier. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		MostS.9 & 3.1.2.11.1.9 & & Le fichier généré aura comme format .html & \\
 		\hline
 	\end{tabular}
@@ -971,7 +972,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{2.2cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
