--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -478,13 +478,13 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		AuthS.1 & 3.1.2.1.2.1 & Envoyer une chaine de caractère contenant un pseudo suivit d'un mot de passe & Le programme détecte cette arrivé et l'indique dans une console de log & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}		
-		AuthS.2 & 3.1.2.1.2.2 & Après avoir récupéré les informations essayer de les faires correspondre a la liste des pseudo / Mot de passe. & Le programme indique dans une console de log le succès ou l'échec de l'opération & \\
+		AuthS.2 & 3.1.2.1.2.2 & Après avoir récupéré les informations essayer de les faire correspondre à la liste des pseudo / Mot de passe. & Le programme indique dans une console de log le succès ou l'échec de l'opération & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}		
 		AuthS.3 & 3.1.2.1.2.3 & Envoyer une chaine contenant le mot "succès" ou "échec" (suivant la réponse au test AuthS.2) sur un client sommaire. & Chaine reçu en concordance avec le résultat du test AuthS.2 & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}		
 		AuthS.4 & 3.1.2.1.2.4 & Vérifier que le pseudo et le mot de passe admin sont unique. & Les identifiants sont unique. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthS.5 & 3.1.2.1.2.5 & Se connecter en temps qu'Administrateur. &  Avoir accès a la totalité des fichiers du serveur. & \\
+		AuthS.5 & 3.1.2.1.2.5 & Se connecter en temps qu'Administrateur. &  Avoir accès à la totalité des fichiers du serveur. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -498,11 +498,11 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		PafiS.1 & 3.1.2.2.1 & Crée un compte et essayer de partager des fichiers présent a partir de la racine. & Les fichiers ne doivent pas être accessible. & \\
+		PafiS.1 & 3.1.2.2.1 & Crée un compte et essayer de partager des fichiers présent à partir de la racine. & Les fichiers ne doivent pas être accessible. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		PafiS.2 & 3.1.2.2.2 & Crée 2 comptes et partager un même fichier a ses 2 comptes & Se connecter sur les 2 comptes et vérifier l'accès aux fichiers. & \\
+		PafiS.2 & 3.1.2.2.2 & Crée 2 comptes et partager un même fichier à ses 2 comptes & Se connecter sur les 2 comptes et vérifier l'accès aux fichiers. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		PafiS.3 & 3.1.2.2.3 & Crée un compte lui partager un fichier et bloqué l'accès a un sous dossier & Se connecter sur le compte crée, le fichier ne doit pas être présent dans la liste des fichiers. & \\
+		PafiS.3 & 3.1.2.2.3 & Crée un compte lui partager un fichier et bloqué l'accès à un sous dossier & Se connecter sur le compte crée, le fichier ne doit pas être présent dans la liste des fichiers. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		PafiS.4 & 3.1.2.2.4 & Ouvrir un explorateur de fichier sur le serveur & Les fichiers sont visible avec l'explorateur de fichier & \\
 		\hline
@@ -518,7 +518,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		GecuS.1 & 3.1.2.3.1.1 & Ouvrir le logiciel & Une zone est présente a gauche. & \\
+		GecuS.1 & 3.1.2.3.1.1 & Ouvrir le logiciel & Une zone est présente à gauche. & \\
 		\cline{1-2}\cline{4-5}
 		GecuS.1.1 & 3.1.2.3.1.2 & & Dans cette zone se trouve la liste des comptes. & \\
 		\cline{1-2}\cline{4-5}
@@ -526,11 +526,11 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\cline{4-5}
 		GecuS.1.3 & 3.1.2.3.1.4 & & En bas de la zone de gauche 2 boutons sont présent & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GecuS.1.3.1 & 3.1.2.3.1.4.1 & & Un bouton "-" rouge est présent en bas a droite & \\
+		GecuS.1.3.1 & 3.1.2.3.1.4.1 & & Un bouton "-" rouge est présent en bas à droite & \\
 		\cline{1-2}\cline{4-5}
 		GecuS.1.3.1.1 & 3.1.2.3.1.4.2 & Cliquer sur le bouton "-" & Un pop-up apparait. & \\
 		\cline{1-2}\cline{4-5}
-		GecuS.1.3.2 & 3.1.2.3.1.4.3 & & Un bouton "+" vert est présent en bas a droite & \\
+		GecuS.1.3.2 & 3.1.2.3.1.4.3 & & Un bouton "+" vert est présent en bas à droite & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GecuS.1.3.2.1 & 3.1.2.3.1.4.4 & Cliquer sur le bouton "+" & Un pop-up apparait. & \\
 		\cline{1-2}\cline{4-5}
@@ -546,9 +546,9 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GecuS.1.3.2.1.2 & 3.2.6.2.2 & Cocher la case "Utilisateur Temporaire" & Un champ de type date s'ajoute" & \\
 		\cline{1-2}\cline{4-5}
-		GecuS.1.3.3 & 3.2.6.2.3 & & En bas a droite se trouve un bouton annulé & \\
+		GecuS.1.3.3 & 3.2.6.2.3 & & En bas à droite se trouve un bouton annulé & \\
 		\cline{1-2}\cline{4-5}
-		GecuS.1.3.4 & 3.2.6.2.4 & & En bas a gauche un bouton "Valider" est présent & \\ 
+		GecuS.1.3.4 & 3.2.6.2.4 & & En bas à gauche un bouton "Valider" est présent & \\ 
 		\cline{1-2}\cline{4-5}
 		GecuS.1.4 & 3.1.2.3.1.5 & & Les comptes temporaires sont soulignés & \\
 		\cline{1-2}\cline{4-5}
@@ -582,9 +582,9 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GecuS.4 & 3.1.2.3.3 & Regarder la liste des membres présente à droite & Elle contient la totalité des comptes crée & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GecuS.5 & 3.1.2.3.4 & Cliquer sur un compte & La liste des fichiers auquel il a accès se trouve a droite et un plus est présent en bas a droite. & \\
+		GecuS.5 & 3.1.2.3.4 & Cliquer sur un compte & La liste des fichiers auquel il a accès se trouve à droite et un plus est présent en bas à droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GecuS.6 & 3.1.2.3.5 & Cliquer sur un compte et cliquer sur le bouton "-" présent en bas a droite de la partie droite & Le compte est banni après confirmation. & \\
+		GecuS.6 & 3.1.2.3.5 & Cliquer sur un compte et cliquer sur le bouton "-" présent en bas à droite de la partie droite & Le compte est banni après confirmation. & \\
 		\cline{1-2}\cline{4-5}
 		GecuS.7 & 3.1.2.3.6 & & Le compte est supprimé après confirmation. & \\
 		\hline
@@ -632,7 +632,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BancS.2 & 3.1.2.4.2 & Et retirer les droits sur un fichier. & Ouvrir le fichier .acc et vérifié que les droits sur le fichier ont été retiré. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BancS.3 & 3.1.2.4.3 & Bannir temporairement une personne. & Verifier que le fichier .accban est mis a jours. & \\
+		BancS.3 & 3.1.2.4.3 & Bannir temporairement une personne. & Verifier que le fichier .accban est mis à jours. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BancS.4 & 3.1.2.4.4 & Bannir un compte. & Vérifier que le champs raison est présent lors du bannissement. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -652,7 +652,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		BantS.1 & 3.1.2.5.1 & Cliquer sur un compte puis sur "-" présent sur la zone de gauche. & Un chams permet de donner une durée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BantS.2 & 3.1.2.5.2 & Cliquer sur un compte bannis. & Le temps restant apparait a droite. & \\
+		BantS.2 & 3.1.2.5.2 & Cliquer sur un compte bannis. & Le temps restant apparait à droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BantS.3 & 3.1.2.5.3 & Cliquer sur un compte puis sur "-" présent dans la zone de gauche. & Un champs permet de donner la raison. & \\
 		\hline
@@ -672,9 +672,9 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BanpS.2 & 3.1.2.6.3.2 & Cliquer sur un utilisateur & Dans la partie droite seul la liste des fichiers accessible par l'utilisateur est présente. & \\
 		\cline{1-2}\cline{4-5}
-		BanpS.2.1 & 3.1.2.6.3.3 & & 2 Champs sont présent en bas a droite de la partie de droite. & \\
+		BanpS.2.1 & 3.1.2.6.3.3 & & 2 Champs sont présent en bas à droite de la partie de droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BanpS.2.1.1 & 3.1.2.6.3.3.1 & & Un "+" vert est présent en bas a droite & \\
+		BanpS.2.1.1 & 3.1.2.6.3.3.1 & & Un "+" vert est présent en bas à droite & \\
 		\cline{1-2}\cline{4-5}
 		BanpS.2.1.1.1 & 3.1.2.6.3.5 & Cliquer sur le "+" & Un pop-up apparait, celui ci permettant de selectionner des fichiers & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -769,7 +769,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CotS.2 & 3.1.2.6.7.2 & Ouvrir le fichier .acctmp & Le fichier contient un timestamp. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CotS.3 & 3.1.2.6.7.3 & Accéder a un compte dont le temps est écoulé & Le compte doit être supprimé du fichier .acctmp & \\
+		CotS.3 & 3.1.2.6.7.3 & Accéder à un compte dont le temps est écoulé & Le compte doit être supprimé du fichier .acctmp & \\
 		\cline{1-2}\cline{4-5}
 		CotS.3.1 & 3.1.2.6.7.4 & & Un message indique que le compte temporaire vient d'être supprimé. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
